# Qt6

./: .gitattributes
1-Task1_HelloWorld/Files/: CMakeLists.txt  main.cpp
2-Task2_ImagesWithBottons/: README.md
2-Task2_ImagesWithBottons/Files/: CMakeLists.txt  Main.qml  main.cpp  resources.qrc
